[platform] get rid of security manager based workaround FL-31496
Merge-request: FLEET-MR-5508
Merged-by: Vladislav Soroka <Vladislav.Soroka@jetbrains.com>

GitOrigin-RevId: cd80cd8eb8c191dc103fbbc550c16a045e3a4e2e